--- a/description.html
+++ b/description.html
@@ -30,7 +30,7 @@
             <div class="container-fluid">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="homepage.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                  <li class="nav-item">
                     <a class="nav-link" href="description.html">Description</a>
