--- a/payment.html
+++ b/payment.html
@@ -93,7 +93,9 @@
             </div>
           </div>
           <br>
-          <h2>Total fee to pay:$500.00</h5>
+          <section>
+          <h2>Total fee to pay:$500.00</h2>
+          </section>
         </article>
     </body>
 </html>
