--- a/payment.html
+++ b/payment.html
@@ -93,9 +93,7 @@
             </div>
           </div>
           <br>
+          <p>Total fee to pay: $500.00</p>
         </article>
-        <section>
-          <h2>Total fee to pay:$500.00</h2>
-        </section>
     </body>
 </html>
