--- a/verification 2.html
+++ b/verification 2.html
@@ -39,7 +39,7 @@
 
         <article>
         <p>Sign in with okta to top up wallet</p>
-        <a href="amount.html"><img src="https://help.okta.com/eu/en-us/Content/resources/images/end-user/mfa-ov-by-code.png" alt="okta verify">
+        <a href="amount.html"><img src="images/okta-verification.png" alt="okta verify">
         </article>
     </body>
     </html>
