--- a/verification.html
+++ b/verification.html
@@ -39,7 +39,7 @@
 
         <article>
         <p>Sign in with okta to pay for service</p>
-        <a href="payment.html"><img src="https://help.okta.com/eu/en-us/Content/resources/images/end-user/mfa-ov-by-code.png" alt="okta verify">
+        <a href="payment.html"><img src="images/okta-verification.png" alt="okta verify">
         </article>
     </body>
     </html>
